--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node ./main.js"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "moment": "^2.29.4"
