--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colors": "^1.4.0",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
+    "figlet-promised": "^1.0.0",
     "moment": "^2.29.4"
   }
 }
