--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "figlet-promised": "^1.0.0",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4"
   }
 }
